Se cambio el color negro la barranav

--- a/css/estilos.css
+++ b/css/estilos.css
@@ -15,7 +15,7 @@
     justify-content: space-between;
 }
 .barra{
-
+    background-color: black;
     display: flex;                     /* Separacion entre el logo y enlaces */
     justify-content: space-between;   /* Separacion entre el logo y enlaces (alinear horizontal)*/
     padding-top: 30px; /* Separación de arriba de la barra */
