Creando enlaces mejores

--- a/css/estilos.css
+++ b/css/estilos.css
@@ -24,5 +24,5 @@
     align-items: center; /* se alinean los elementos que conforman a la barra */
 }
 nav{
-    style: none;
+    text-decoration: none;
 }
