--- a/css/estilos.css
+++ b/css/estilos.css
@@ -28,7 +28,7 @@
     font-family: 'Ma Shan Zheng', cursive;
     color: rgba(243, 188, 65, 0.6);
     text-decoration: none; /* elimina el subrayado por default de los enlaces en html */
-    font-size: 3.5rem; /* Tamaño de la fuente 18px = 1.8rem, solo se recorreo un cero a la izquierda para hacer el calculo*/
+    font-size: 20px; /* Tamaño de la fuente 18px = 1.8rem, solo se recorreo un cero a la izquierda para hacer el calculo*/
     font-weight: 100;
-    margin-right: 2rem; /* separacion entre los enlaces */
+    margin-right: 20px; /* separacion entre los enlaces */
 }
