--- a/css/estilos.css
+++ b/css/estilos.css
@@ -33,3 +33,19 @@
     font-weight: 100;
     margin-right: 20px; /* separacion entre los enlaces */
 }
+.pie{
+    display: flex;
+    justify-content: space-between;
+    background-color: rgb(0, 0, 0);
+    align-items: center;
+    color: white;
+}
+.navegacion-dos a {
+
+    font-family: 'Ma Shan Zheng', cursive;
+    color: rgba(243, 188, 65, 0.6);
+    text-decoration: none; /* elimina el subrayado por default de los enlaces en html */
+    font-size: 15px; /* Tamaño de la fuente 18px = 1.8rem, solo se recorreo un cero a la izquierda para hacer el calculo*/
+    font-weight: 200;
+    margin-right: 2rem; /* separacion entre los enlaces */
+}
